# PENDEKAR-PROJECT

./: .gitignore  Cargo.toml  README.md  build-sample.rs  package-lock.json  package.json
examples/: unbox.rs
src/: App.tsx  main.rs
src/app/: error.rs  fetcher.rs  mod.rs  unwrapper.rs
src/containers/landingPage/: landingPage.css  landingPage.tsx
src/containers/login/: login.css  login.tsx
src/containers/register/: register.tsx
src/handler/: beasiswa.rs  event.rs  login.rs  lowongankerja.rs  markah.rs  mod.rs  notifikasi.rs  profile.rs  register.rs  transaksi.rs
