[package]
name = "web-service"
version = "1.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0"

sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
chrono = { version = "0.4", features = [ "serde" ] }
async-trait = "0.1"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

log = "0.4"
env_logger = "0.10"
